// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Dedicated config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "100.00",
    },
    {
      "title": "200.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "value": 100,
    },
    "Instance-hours": {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem ipsum
         
        
      </React.Fragment>,
    },
    {
      "title": "100.00",
    },
    {
      "title": "200.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "value": 100,
    },
    "Instance-hours": {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-dedicated-metrics"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
          isInline={true}
          variant="link"
        >
          lorem ipsum
        </Button>
         
        
      </React.Fragment>,
    },
    {
      "title": "100.00",
    },
    {
      "title": "200.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "value": 100,
    },
    "Instance-hours": {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-dedicated-metrics"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "100.00",
    },
    {
      "title": "200.00",
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-dedicated-metrics"})",
      "value": 100,
    },
    "Instance-hours": {
      "title": "t(curiosity-inventory.header_Instance-hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "content": [Function],
          },
          {
            "id": "rangedMonthly",
            "position": "right",
          },
        ],
        "chartType": "line",
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Cores",
          "Instance-hours",
        ],
        "isCardTitleDescription": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isStacked": false,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "line",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Cores",
            "isCapacity": false,
            "isStacked": false,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Cores",
            "stroke": "#06c",
            "strokeWidth": 2,
            "yAxisUseDataSet": true,
          },
          {
            "chartType": "line",
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "Instance-hours",
            "isCapacity": false,
            "isStacked": false,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Instance-hours",
            "stroke": "#009596",
            "strokeWidth": 2,
            "yAxisUseDataSet": true,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "stringId": "Cores",
        "stroke": "#06c",
        "yAxisUseDataSet": true,
      },
    },
  ],
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should NOT display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "content": [Function],
    },
    {
      "id": "rangedMonthly",
      "position": "right",
    },
  ],
  "isCardTitleDescription": true,
}
`;

exports[`Product OpenShift Dedicated config should apply toolbar configuration: filters 1`] = `undefined`;
